tests/semantic/adt_invalid_branch/adt_invalid_branch.err
Error: Undefined type n in definition of branch Int in file adt_invalid_branch.dl at line 18
.type A = Int {x: n} | Float {x: float}
------------------^---------------------
1 errors generated, evaluation aborted
